--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "direct-helper",
+  "name": "direct-manager",
   "version": "0.0.0",
-  "description": "helper",
+  "description": "manager",
   "main": "lib/index.js",
   "module": "src/index.js",
   "files": [
@@ -18,15 +18,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cheminfo/direct-helper.git"
+    "url": "git+https://github.com/cheminfo/direct-manager.git"
   },
   "keywords": [],
   "author": "Moreno. W, Osorio. J",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cheminfo/direct-helper/issues"
+    "url": "https://github.com/cheminfo/direct-manager/issues"
   },
-  "homepage": "https://github.com/cheminfo/direct-helper#readme",
+  "homepage": "https://github.com/cheminfo/direct-manager#readme",
   "jest": {
     "testEnvironment": "node"
   },
@@ -42,9 +42,12 @@
     "@types/jest": "^26.0.15",
     "eslint": "^7.14.0",
     "eslint-config-cheminfo": "^5.2.2",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "rollup": "^2.33.3"
