--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lib-esm"
   ],
   "scripts": {
+    "build": "npm run tsc && cheminfo-build",
     "check-types": "tsc --noEmit",
     "clean": "rimraf lib lib-esm",
     "eslint": "eslint src --cache",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "cheminfo-build": "^1.1.11",
     "eslint": "^7.32.0",
     "eslint-config-cheminfo-typescript": "^8.0.9",
     "jest": "^27.0.6",
