--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "outDir": "lib",
     "sourceMap": true,
     "strict": true,
     "target": "es2020"
