--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,9 @@ jobs:
       - name: Run ESLint
         run: npm run eslint
       - name: Run Prettier
-        run: npm run prettier 
+        run: npm run prettier
+      - name: Check types
+        run: npm run check-types
   test:
     runs-on: ubuntu-latest
     strategy:
