--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
   "bugs": {
     "url": "https://github.com/josoriom/direct-manager/issues"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "homepage": "https://github.com/josoriom/direct-manager#readme",
   "devDependencies": {
     "@types/jest": "^27.0.2",
